# oxidize-theme

./: Cargo.toml  README.md
src/: ctx.rs  main.rs  theme.rs  transaction.rs  util.rs
src/apply/: gnome.rs  mod.rs  reload.rs  wallpaper.rs
src/render/: engine.rs  mod.rs  parser.rs
