[package]
name = "oxidize-theme"
version = "0.2.0"
edition = "2024"
description = "Atomic theme switcher for Wayland desktops"
license = "MIT"

[dependencies]
anyhow    = { version = "1", features = ["backtrace"] }
clap      = { version = "4", features = ["derive"] }
tempfile  = "3"
toml      = { version = "0.8", default-features = false, features = ["parse"] }
walkdir   = "2"

[profile.release]
strip         = true
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
